<resources>
    <string name="app_name">Descubra Curitiba</string>
    <string name="app_title">Descubra Curitiba</string>

    <!--First Screen-->
    <string name="create_itinerary">Criar Itinerário</string>
    <string name="use_last_saved_route">Utilizar última rota salva</string>
    <string name="places_to_visit">Locais para conhecer</string>
    <string name="background_image_description">Imagem de fundo</string>

    <!--Create Itinerary-->
    <string name="select_origin">Local de partida</string>
    <string name="use_current_location">Utilizar localização atual</string>

    <string name="select_start_day">Primeiro dia de passeio</string>
    <string name="select_end_day">Último dia de passeio</string>
    <string name="calendar_description">Imagem calendário</string>

    <string name="select_start_time">Horário de início</string>
    <string name="select_end_time">Horário de término</string>
    <string name="clock_description">Imagem relógio</string>

    <string name="interesting_places">Locais de interesse</string>
    <string name="select_list_parks">Parques, bosques e praças</string>
    <string name="select_list_landmarks">Pontos turísticos</string>
    <string name="select_list_museums">Museus</string>
    <string name="select_list_shopping">Locais de compras</string>
    <string name="select_list_restaurants">Restaurantes</string>
    <string name="parks_description">Imagem parques</string>
    <string name="landmarks_description">Imagem pontos turísticos</string>
    <string name="museums_description">Imagem museus</string>
    <string name="shopping_description">Imagem locais de compras</string>
    <string name="food_description">Imagem gastronomia</string>

    <string name="forecast_checkBox">Considerar a previsão do tempo dos próximos 7 dias para a construção do itinerário</string>
    <string name="finish_itinerary">Finalizar</string>

    <!--Itinerary-->
    <string name="title_activity_itinerary">Itinerário</string>
    <string name="place_thumbnail_description">Imagem local de visita</string>
    <string name="magnifier_description">Imagem lupa</string>
    <string name="weather_description">Imagem clima</string>
    <string name="navigate_description">Imagem navegar</string>
    <string name="mean_of_transportation">Imagem meio de deslocamento</string>
    <string name="change_mean_of_transportation">Imagem trocar meio de deslocamento</string>
    <string name="action_settings">Não implementado</string>

    <!--Place details-->
    <string name="title_activity_details">Detalhes</string>

    <!--Place list-->
    <string name="imagem_local">Imagem local</string>


    <!--Daily forecast-->
    <string name="title_activity_daily_forecast">Previsão do dia</string>

</resources>
