<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jgaug.descubracuritiba.Activities.CreateItinerary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="vertical">

        <!-- focusableInTouchMode and focusable attributes prevents the textView to get focus when the activity starts  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/layout_background"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTextOrigin"
                android:text="@string/select_origin"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editTextOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnSelectPlaceOnMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorSecondaryLight"
                android:onClick="btnUseCurrentLocation"
                android:text="@string/use_current_location"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:background="@drawable/layout_background"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="false"
                android:contentDescription="@string/calendar_description"
                android:cropToPadding="false"
                app:srcCompat="@drawable/calendar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/select_start_day"
                    android:textColor="@color/colorSecondaryDark"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/textViewStartDay"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/border_bottom"
                    android:gravity="bottom"
                    android:onClick="setDate"
                    android:paddingBottom="2dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/select_end_day"
                    android:textColor="@color/colorSecondaryDark"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/textViewEndDay"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/border_bottom"
                    android:gravity="bottom"
                    android:onClick="setDate"
                    android:paddingBottom="2dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:background="@drawable/layout_background"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="false"
                android:contentDescription="@string/clock_description"
                android:cropToPadding="false"
                app:srcCompat="@drawable/clock"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/select_start_time"
                    android:textColor="@color/colorSecondaryDark"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/textViewStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/border_bottom"
                    android:gravity="bottom"
                    android:onClick="setTime"
                    android:paddingBottom="2dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/select_end_time"
                    android:textColor="@color/colorSecondaryDark"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/textViewEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/border_bottom"
                    android:gravity="bottom"
                    android:onClick="setTime"
                    android:paddingBottom="2dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:background="@drawable/layout_background"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/interesting_places"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewParks"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/parks_description"
                    android:onClick="onSelectPlacesToVisit"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/parks_unchecked"/>

                <ImageView
                    android:id="@+id/imageViewLandmarks"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/landmarks_description"
                    android:onClick="onSelectPlacesToVisit"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/landmarks_unchecked"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewMuseums"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/museums_description"
                    android:onClick="onSelectPlacesToVisit"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/museums_unchecked"/>

                <ImageView
                    android:id="@+id/imageViewShopping"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/shopping_description"
                    android:onClick="onSelectPlacesToVisit"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/shopping_unchecked"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewFood"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/food_description"
                    android:onClick="onSelectPlacesToVisit"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/food_unchecked"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxForecast"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:checked="true"
            android:text="@string/forecast_checkBox"/>

        <Button
            android:id="@+id/btnMakeItinerary"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:onClick="btnMakeItinerary"
            android:text="@string/finish_itinerary"/>
    </LinearLayout>
</ScrollView>